[project]
name = "einsatzleitung"
version = "0.3.0"
description = "Digitale Unterstützung in der Technische Einsatzleitung (TEL)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlmodel>=0.0.8",
]
